src/css/gameboy.css
/* ... */
#LCD
{
  image-rendering: -webkit-optimize-contrast;
}

#LCD-dropshadow
{
  position: absolute;
  top: 0;
  left: 0;
  width: 320px;
  height: 288px;
  box-shadow: 0 0.5px 0.5px #ffffff, inset 0px 3px 10px #222;
}

#STATUS
{
  display: none;
}

.button
{
  width: 58px;
  height: 58px;
  cursor: pointer;
  border-radius: 31px;
  background-color: #4a4a4a;
  display: block;
  background-color: #f7f7f7;
  background-image: -webkit-linear-gradient(top, #262626, #000000);
  color: #000000;
  text-shadow: #313131 0px 1px;
  position: relative;
  text-align: center;
  line-height: 58px;
  font-size: 30px;
  box-shadow: 0 3px 7px #1b1b1b, inset 0 2px 3px #676767;
  border: 2px solid black;
  border-top: 1px solid black;
}

.button.pressed
{
  box-shadow: 0 1px 4px rgba(27, 27, 27, 0.72), inset 0 2px 3px rgba(103, 103, 103, 0.59);
}

.button-option-group
{
  display: inline-block;
  -webkit-flex-grow: 1;
}

.button-option
{
  margin: 0 auto;
  width: 40px;
  height: 16px;
  background: black;
  border-radius: 45%;
  box-shadow: 0 -1px 3px #1b1b1b, inset 0 4px 8px rgba(103, 103, 103, 0.51);
  border: 2px solid black;
  border-top: 1px solid black;
}

.button-option.pressed
{
  box-shadow: 0 -1px 3px #1b1b1b, inset 0 4px 8px rgba(103, 103, 103, 0.39);
}

.button-label
{
  opacity: 0.3;
  text-shadow: 0 -1px #777;
  font-size: 14px;
  margin-top: 8px;
  text-transform: uppercase;
  margin: 4px auto;
  text-align: center;
}

#group-buttons
{
  position: relative;
  height: 115px;
  width: 142px;
  background-size: 132px 115px;
  margin: auto;
}

#group-options
{
  position: relative;
  width: 160px;
  height: 50px;
  background-size: 125px 50px;
  margin: auto;
  display: -webkit-flex;
}

#control-a
{
  position: absolute;
  top: 5px;
  right: 3px;
}

#control-b
{
  position: absolute;
  bottom: 9px;
  left: 3px;
}

#control-dpad
{
  width: 128px;
  height: 128px;
  background-size: 128px 128px;
  margin: auto;
}

#button-done
{
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 44px;
  line-height: 44px;
  text-align: right;
  cursor: pointer;
  font-size: 16px;
  padding-right: 12px;
  color: #d9d9d9;
  text-shadow: 0 1px 0 #4a4a4a;
  opacity: 0.6;
}

#button-done::after
{
  content: " >";
}

.button-done.pressed
{
}

#debug
{
  height: 20px;
  width: 100px;
  position: absolute;
  top: 0;
  left: 0;
  background-color: black;
  color: white;
  opacity: 0.7;
  padding: 20px 0;
  text-align: center;
  width: 568px;
}
  
#screen-console
{
  transition: left 0.3s ease-in-out;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-image: url('/images/noise.png');
  border-radius: 12px;
}

.grape 
{
  background-color: #27358B;
}

.cherry
{
  background-color: #D81E57;
}

.teal
{
  background-color: #007FA0;
}

.lime
{
  background-color: #A0D02E;
}

.yellow
{
  background-color: #FECF41;
}

#list-games
{
  position: absolute;
  margin: 0;
  padding: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.content
{
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}
  
#list-games-content
{
  position: absolute;
  top: 0;
  left: 0;
  width: 2000px;
  height: 100%;
}

#list-games-page-control
{
  position: absolute;
  bottom: 0;
  left: 0;
  height: 36px;
  width: 100%;
  display: -webkit-box;
  -webkit-box-orient: horizontal;
  -webkit-box-pack: center;
}

.page
{
  width: 6px;
  height: 6px;
  background-color: white;
  border-radius: 50%;
  opacity: 0.5;
  margin: 5px;
}

.page.active
{
  opacity: 1.0;
}
  
.game
{
  position: absolute;
  text-align: center;
}

.game-title
{
  word-wrap: break-word;
  font-size: 16px;
  color: #444;
  width: 130px;
  height: 130px;
  padding: 10px;
  margin: 10px;
  display: table-cell; 
  vertical-align: middle; 
  text-align: center; 
  background-color: #999;
}

.game-thumbnail
{
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 150px;
  border-radius: 1px;
  opacity: 0.2;
}

.downloaded > .game-thumbnail
{
  opacity: 1.0;
}

.game-overlay
{
  position: absolute;
  top: 0;
  left: 0;
  width: 150px;
  height: 150px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6), inset 0 1px 2px rgba(255, 255, 255, 0.74);
}
    
#screen-games
{
  width: 100%;
  height: 100%;
  background-color: #272727;
  border-radius: 12px;
  background-size: 233px 133px;
}

#screen-empty
{
}

#screen-loading
{
  width: 100%;
  height: 100%;
}

.screen-splash
{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #000;
}

.placeholder
{
  color: white;
  text-shadow: 0 1px #000;
  text-align: center;
  padding: 80px 40px;
  margin: auto;
}

#screen-authorize
{
}

#screen-authorize h1
{
  padding-top: 0;
  margin-top: 0;
}

#screen-authorize-panel
{
  position: absolute;
  background-color: #fff;  
  top: 20px;
  left: 20px;
  width: 508px;
  height: 196px;
  padding: 10px;
  font-size: 14px;
}

.actions
{
  text-align: center;
  margin: 30px;
}

.google-button-blue
{
  border: 1px solid #3079ED;
  color: white;
  text-shadow: 0 1px rgba(0, 0, 0, 0.1);
  background-color: #4D90FE;
  background-image: -webkit-gradient(linear,left top,left bottom,from(#4d90fe  ),to(#4787ed  ));
  background-image: -webkit-linear-gradient(top,#4d90fe  ,#4787ed  );
  background-image: -moz-linear-gradient(top,#4d90fe  ,#4787ed  );
  background-image: -ms-linear-gradient(top,#4d90fe  ,#4787ed  );
  background-image: -o-linear-gradient(top,#4d90fe  ,#4787ed  );
  background-image: linear-gradient(top,#4d90fe  ,#4787ed  );
  padding: 8px;
}
/* ... */

